# svc-mesh

./: Cargo.toml  README.md
data/: Book_03.glb  Combat_Helmet.glb  Floor_Junk_Cluster_01.glb  Machine_01.glb  Meshes.toml
schema/: generate.bat  generate.sh  svc_mesh.fbs  svc_mesh_generated.h  svc_mesh_generated.rs
src/: animation.rs  data.rs  error.rs  format.rs  generated.rs  main.rs  material.rs  math.rs  mesh.rs  model.rs  node.rs  primitive.rs  scene.rs  tangents.rs  texture.rs
