[package]
name = "svc-mesh"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
edition = "2018"

[dependencies]
meshopt = "0.1.6"
serde_json = "1.0.9"
cgmath = "0.17.0"
collision = "0.20.1"
num-traits = "0.2.6"
mikktspace = "0.1.1"
nalgebra = "0.9.0"
log = "0.4.6"

[dependencies.gltf]
version = "0.11.3"
features = ["import", "utils", "extras", "names"]