[package]
name = "svc-mesh"
version = "0.1.1"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]
edition = "2018"

[dependencies]
meshopt = "0.1.6"
serde_json = "1.0.39"
num-traits = "0.2.6"
mikktspace = "0.1.1"
nalgebra = "0.18.0"
log = "0.4.6"
image = "0.21.1"
base64 = "0.10.1"

[dependencies.gltf]
version = "0.11"
features = ["import", "utils", "extras", "names"]